feat: rename to AnimaWatch and upgrade to FastMCP with latest MCP spec
BREAKING CHANGE: Renamed package from visual-diagnosis-mcp to animawatch

- Rename project to AnimaWatch (more memorable name)
- Upgrade from low-level MCP Server to FastMCP (latest Python SDK)
- Implement MCP spec 2025-11-25 features:
  - Lifespan management with typed AppContext
  - Resources for recordings and analyses (URI templates)
  - Prompts for different analysis types
  - Image content type for screenshots
- New tools: watch, screenshot, record, analyze_video, check_accessibility
- Resources: animawatch://recordings/{id}, animawatch://analyses/{id}, animawatch://config
- Prompts: animation_diagnosis, page_analysis, accessibility_check
- Support both stdio and streamable-http transports
- Update version to 0.2.0

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Visual Diagnosis MCP Server Configuration
+# AnimaWatch MCP Server Configuration
 # Copy this file to .env and fill in your values
 
 # =============================================================================
@@ -41,7 +41,7 @@ MAX_RECORDING_DURATION=30
 
 # Server host and port (for HTTP transport)
 SERVER_HOST=127.0.0.1
-SERVER_PORT=8384
+SERVER_PORT=8765
 
 # Directory to store recordings (default: temp directory)
 # RECORDINGS_DIR=/path/to/recordings
