feat: add production-ready improvements and new examples
- Add 4 new example scripts:
  - visual_comparison.py: Compare pages for visual differences
  - multipage_workflow.py: Test user journeys across multiple pages
  - form_interaction.py: Test form interactions and input animations
  - ci_integration.py: CI/CD integration with structured output and exit codes

- Add production-ready modules:
  - logging.py: Structured JSON logging with timing decorators
  - retry.py: Retry logic with exponential backoff and circuit breaker pattern

- Update vision.py with retry and logging utilities
- Update examples/README.md with documentation for all 7 examples
- Fix Release Please v4 output handling in release.yml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,22 +32,26 @@ jobs:
 
       # Auto-merge the Release PR so every merge to main triggers a release
       - name: Auto-merge Release PR
-        if: steps.release.outputs.pr
+        if: ${{ steps.release.outputs.prs_created == 'true' }}
         uses: actions/github-script@v8
         with:
           script: |
-            const prNumber = ${{ steps.release.outputs.pr }};
-            try {
-              await github.rest.pulls.merge({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                pull_number: prNumber,
-                merge_method: 'squash'
-              });
-              core.info(`✅ Release PR #${prNumber} merged successfully`);
-            } catch (error) {
-              core.warning(`⚠️ Failed to auto-merge Release PR #${prNumber}: ${error.message}`);
-              core.warning('Manual merge may be required if there are conflicts or branch protection rules.');
+            // Parse the prs JSON output to get PR numbers
+            const prs = JSON.parse('${{ steps.release.outputs.prs }}' || '[]');
+            for (const pr of prs) {
+              const prNumber = pr.number;
+              try {
+                await github.rest.pulls.merge({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  pull_number: prNumber,
+                  merge_method: 'squash'
+                });
+                core.info(`✅ Release PR #${prNumber} merged successfully`);
+              } catch (error) {
+                core.warning(`⚠️ Failed to auto-merge Release PR #${prNumber}: ${error.message}`);
+                core.warning('Manual merge may be required if there are conflicts or branch protection rules.');
+              }
             }
 
   # Build and attach artifacts to the GitHub Release
