fix: address CodeRabbit second review comments
- Remove duplicate MAX_PROCESSING_SECONDS constant in vision.py
- Consolidate types-aiofiles into [project.optional-dependencies] dev
- Remove duplicate [dependency-groups] section from pyproject.toml
- Add pr.number validation in release.yml before API call
- Use async-safe circuit breaker methods in with_retry decorator
- Change issues_found/critical_issues to int|None in TestResult
- Return None instead of -1 sentinel for parse failures in ci_integration.py

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,6 +52,11 @@ jobs:
               prs = [];
             }
             for (const pr of prs) {
+              // Validate pr.number before using it
+              if (!pr || typeof pr.number !== 'number') {
+                core.warning(`Skipping invalid PR entry: ${JSON.stringify(pr)}`);
+                continue;
+              }
               const prNumber = pr.number;
               try {
                 await github.rest.pulls.merge({
