--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,8 @@ jobs:
       - uses: googleapis/release-please-action@v4
         id: release
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          # Use PAT to allow creating PRs (GITHUB_TOKEN is blocked by repo settings)
+          token: ${{ secrets.PAT_AUTO_MERGE }}
           config-file: release-please-config.json
           manifest-file: .release-please-manifest.json
 
