--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,11 @@ jobs:
       - uses: googleapis/release-please-action@v4
         id: release
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          # PAT_AUTO_MERGE is required because repository settings block GITHUB_TOKEN
+          # from creating pull requests. This should be a fine-grained PAT limited to
+          # this repository with minimal permissions: contents:write, pull-requests:write.
+          # Avoid using classic repo-scoped PATs for security.
+          token: ${{ secrets.PAT_AUTO_MERGE }}
           config-file: release-please-config.json
           manifest-file: .release-please-manifest.json
 
